--- a/src/app/components/admin-controls/admin-controls.component.html
+++ b/src/app/components/admin-controls/admin-controls.component.html
@@ -1,17 +1,21 @@
-@if(game$ | async; as game) {
-<div>
-  <h2>{{ game.name }}</h2>
-</div>
-<div class="flex items-baseline">
-  @if(game.status === 'PENDING') {
-  <button mat-flat-button class="mr-4" (click)="startGame()">Start game</button>
-  } @if(game.status === 'STARTED') { @if(game.words.length) {
-  <button mat-flat-button (click)="nextWord()">Next word</button>
-  }
-  <span class="ml-2 mr-3">Words left: {{ game.words.length }}</span>
-  <button mat-flat-button (click)="endGame()">End game</button>
-  }
-</div>
+@if (game$ | async; as game) {
+  <div>
+    <h2>{{ game.name }}</h2>
+  </div>
+  <div class="flex items-baseline">
+    @if (game.status === "PENDING") {
+      <button mat-flat-button class="mr-4" (click)="startGame()">
+        Start game
+      </button>
+    }
+    @if (game.status === "STARTED") {
+      @if (game.words.length) {
+        <button mat-flat-button (click)="nextWord()">Next word</button>
+      }
+      <span class="ml-2 mr-3">Words left: {{ game.words.length }}</span>
+      <button mat-flat-button (click)="endGame()">End game</button>
+    }
+  </div>
 }
 
 <div class="mt-5">
