--- a/src/app/components/answers/answers.component.html
+++ b/src/app/components/answers/answers.component.html
@@ -1,21 +1,23 @@
-@if(user$ |async; as user) { @for (answer of answers$ | async; track $index) {
-<div
-  class="my-1 p-2 cursor-pointer"
-  [class.same-answer]="isSameWord(user.answer!, answer.word)"
-  (click)="expand[answer.word] = !expand[answer.word]"
->
-  <div class="flex items-center justify-between">
-    <span class="text-3xl">{{ answer.word }}</span>
-    <span class="text-3xl">{{ answer.answers.length }}</span>
-  </div>
-  <div class="user-list pl-4" [class.expanded]="!expand[answer.word]">
-    <div class="overflow-hidden">
-      @for (u of answer.answers; track $index) {
-      <div [class.same-user]="gameService.userRef?.id === u.user.id">
-        {{ u.user.name }}
+@if (user$ | async; as user) {
+  @for (answer of answers$ | async; track $index) {
+    <div
+      class="my-1 p-2 cursor-pointer"
+      [class.same-answer]="isSameWord(user.answer!, answer.word)"
+      (click)="expand[answer.word] = !expand[answer.word]"
+    >
+      <div class="flex items-center justify-between">
+        <span class="text-3xl">{{ answer.word }}</span>
+        <span class="text-3xl">{{ answer.answers.length }}</span>
       </div>
-      }
+      <div class="user-list pl-4" [class.expanded]="!expand[answer.word]">
+        <div class="overflow-hidden">
+          @for (u of answer.answers; track $index) {
+            <div [class.same-user]="gameService.userRef?.id === u.user.id">
+              {{ u.user.name }}
+            </div>
+          }
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-} }
+  }
+}
