--- a/src/app/components/play/play.component.html
+++ b/src/app/components/play/play.component.html
@@ -1,70 +1,78 @@
 <div class="w-full center-layout">
-  @if(game$ | async; as game) { @if(user$ | async; as user) {
-  <div [ngSwitch]="game.status" class="w-full center-layout">
-    <ng-container *ngSwitchCase="'PENDING'">
-      <h2>Nice to see you again, {{ user.name }}!</h2>
-      <div class="mt-3 italic">Game is not yet started, you can relax :)</div>
-      <img
-        src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGdieXJ5NzQ0dDY3NmFxdHkyeWtvcTVnaXE3bm14dHFieWZ1MzljdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tXL4FHPSnVJ0A/giphy.gif"
-        alt=""
-        class="mt-3"
-        width="200"
-      />
-    </ng-container>
+  @if (game$ | async; as game) {
+    @if (user$ | async; as user) {
+      <div [ngSwitch]="game.status" class="w-full center-layout">
+        <ng-container *ngSwitchCase="'PENDING'">
+          <h2>Nice to see you again, {{ user.name }}!</h2>
+          <div class="mt-3 italic">
+            Game is not yet started, you can relax :)
+          </div>
+          <img
+            src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGdieXJ5NzQ0dDY3NmFxdHkyeWtvcTVnaXE3bm14dHFieWZ1MzljdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tXL4FHPSnVJ0A/giphy.gif"
+            alt=""
+            class="mt-3"
+            width="200"
+          />
+        </ng-container>
 
-    <ng-container *ngSwitchCase="'STARTED'">
-      @if(countdown$ | async; as countdown) {
-      <span> Next word in </span>
-      @if(countdown === 3) {
-      <h1 class="countdown animate__animated animate__bounceIn">
-        {{ countdown }}
-      </h1>
-      } @if(countdown === 2) {
-      <h1 class="countdown animate__animated animate__flipInY">
-        {{ countdown }}
-      </h1>
-      } @if(countdown === 1) {
-      <h1 class="countdown animate__animated animate__flipInY">
-        {{ countdown }}
-      </h1>
-      } } @else {
-      <!-- ANSWER TEMPLATE -->
-      <div class="italic opacity-80">Current word..</div>
-      <h1 class="animate__animated animate__fadeInDown">{{ game.word }}</h1>
+        <ng-container *ngSwitchCase="'STARTED'">
+          @if (countdown$ | async; as countdown) {
+            <span> Next word in </span>
+            @if (countdown === 3) {
+              <h1 class="countdown animate__animated animate__bounceIn">
+                {{ countdown }}
+              </h1>
+            }
+            @if (countdown === 2) {
+              <h1 class="countdown animate__animated animate__flipInY">
+                {{ countdown }}
+              </h1>
+            }
+            @if (countdown === 1) {
+              <h1 class="countdown animate__animated animate__flipInY">
+                {{ countdown }}
+              </h1>
+            }
+          } @else {
+            <!-- ANSWER TEMPLATE -->
+            <div class="italic opacity-80">Current word..</div>
+            <h1 class="animate__animated animate__fadeInDown">
+              {{ game.word }}
+            </h1>
 
-      <div class="border-b-2 border-b-gray-200 w-full"></div>
-      @if (timer$ | async; as timer) {
-      <mat-progress-bar
-        mode="determinate"
-        class="secondary-spinner animate__animated animate__fadeIn"
-        [value]="calculatePercentage(timer, game.maxTime * 1000)"
-      >
-      </mat-progress-bar>
+            <div class="border-b-2 border-b-gray-200 w-full"></div>
+            @if (timer$ | async; as timer) {
+              <mat-progress-bar
+                mode="determinate"
+                class="secondary-spinner animate__animated animate__fadeIn"
+                [value]="calculatePercentage(timer, game.maxTime * 1000)"
+              >
+              </mat-progress-bar>
 
-      <div class="mt-3">
-        Your answer is automaticly submitted when the timer runs out!
+              <div class="mt-3">
+                Your answer is automaticly submitted when the timer runs out!
+              </div>
+              <mat-form-field class="mt-6 animate__animated animate__fadeIn">
+                <mat-label>Your answer</mat-label>
+                <input
+                  matInput
+                  [(ngModel)]="inputAnswer"
+                  placeholder="Type something fast!"
+                />
+              </mat-form-field>
+            } @else {
+              <h2>Times up!</h2>
+
+              <app-answers class="w-full max-w-[400px]"></app-answers>
+            }
+          }
+        </ng-container>
+        <div *ngSwitchCase="'COMPLETE'">
+          <h2>Game's finished! Good job!</h2>
+
+          <app-final-score class="w-full max-w-[400px]"></app-final-score>
+        </div>
       </div>
-      <mat-form-field class="mt-6 animate__animated animate__fadeIn">
-        <mat-label>Your answer</mat-label>
-        <input
-          matInput
-          [(ngModel)]="inputAnswer"
-          placeholder="Type something fast!"
-        />
-      </mat-form-field>
-
-      } @else {
-      <h2>Times up!</h2>
-
-      <app-answers class="w-full max-w-[400px]"></app-answers>
-      } }
-    </ng-container>
-    <div *ngSwitchCase="'COMPLETE'">
-      <h2>Game's finished! Good job!</h2>
-
-      <app-final-score class="w-full max-w-[400px]"></app-final-score>
-    </div>
-  </div>
-
-  } }
+    }
+  }
 </div>
