--- a/src/app/components/admin-controls/admin-controls.component.html
+++ b/src/app/components/admin-controls/admin-controls.component.html
@@ -8,9 +8,9 @@
         {{ gameLink }}
       </div>
 
-      <div class="italic mb-2">
-        When enough people have joined, you can start the game! Players can
-        still join in after the game is started :)
+      <div class="italic mb-2 mt-5">
+        When enough people have joined, you can start the game!
+        <div>Players can still join in after the game is started :)</div>
       </div>
       <button mat-flat-button (click)="startGame()">Start game</button>
     }
@@ -32,8 +32,10 @@
     }
   </div>
 
+  <div class="border-t border-white w-[80%] mt-5"></div>
+
   <div class="flex justify-around w-full max-w-screen-md mt-5">
-    <div class="w-[250px]">
+    <div class="w-[50%]">
       <h2>Players</h2>
       @if (users$ | async; as users) {
         @if (users.length) {
@@ -45,7 +47,7 @@
         }
       }
     </div>
-    <div>
+    <div class="w-[50%]">
       <h2>Words</h2>
       <form (ngSubmit)="addWord()" [formGroup]="form">
         <mat-form-field appearance="fill">
@@ -73,4 +75,11 @@
       }
     </div>
   </div>
+
+  @if (game.status === "STARTED") {
+    <div class="mt-5">
+      <h2>Answers</h2>
+      <app-answers class="w-full max-w-[400px]"></app-answers>
+    </div>
+  }
 }
