--- a/src/app/components/admin-controls/admin-controls.component.html
+++ b/src/app/components/admin-controls/admin-controls.component.html
@@ -66,7 +66,12 @@
 
       <div>Words left in the game</div>
       @for (keyword of game.words; track keyword) {
-        <mat-chip (removed)="removeWord(keyword)" class="mr-2 mb-2">
+        <mat-chip
+          (removed)="removeWord(keyword)"
+          (click)="game.status === 'STARTED' ? nextWord(keyword) : null"
+          matTooltip="Select this word"
+          class="mr-2 mb-2"
+        >
           {{ keyword }}
           <button matChipRemove aria-label="'remove word ' + keyword">
             <mat-icon>cancel</mat-icon>
