--- a/src/app/components/create-game/create-game.component.html
+++ b/src/app/components/create-game/create-game.component.html
@@ -1,11 +1,10 @@
 <div class="center-layout">
-  <div class="pt-2">Ready to get started?</div>
   <button
     class="mt-2 ml-3"
     [disabled]="loading()"
     mat-flat-button
     (click)="createGame()"
   >
-    Create new game
+    Skapa nytt spel
   </button>
 </div>
