--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,13 @@
 <div class="center-layout">
-  <h2>Welcome to HiveMind!</h2>
+  <h2>Nu spelar vi Hivemind!</h2>
 
   <p class="italic">
-    In Hivemind, you will be given a word or phrase, and answer what you think
-    everyone else will answer!
+    I Hivemind så kommer spelarna se ett ord eller en fras, och så ska de svara
+    vad de tror alla andra svarar!
   </p>
   <p class="italic">
-    The players who guessed the most common answer gets a point!
+    De spelare som skriver det mest svarade ordet får ett poäng! Här handlar det
+    alltså om att inte vara unik, utan mainstream!
   </p>
 
   <div class="mt-14">
