--- a/src/app/components/final-score/final-score.component.html
+++ b/src/app/components/final-score/final-score.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between">
-  <div>User</div>
-  <div>Score</div>
+  <div>Spelare</div>
+  <div>Poäng</div>
 </div>
 
 @if (loading$ | async) {
